Fix #5781 ~ Align scrollbar on the right (#5883)

--- a/src/sass/components/composer/composer.scss
+++ b/src/sass/components/composer/composer.scss
@@ -19,6 +19,8 @@
     .composer-dropzone * {pointer-events: none}
     .composer-draggable .composer-dropzone,
     .composer-draggable-editor .composer-askEmbedding {display: flex !important}
+    /* Button toggle BCC/CC */
+    .composer-field-ToList .autocompleteEmails-admin { padding-right: 7px  }
 
     .composer{
 
